# Acadlabs-CLI

./: install.cmd  install.ps1  install.sh  pyproject.toml
src/acadlabs_cli/: __init__.py  main.py  ui.py
src/acadlabs_cli/client/: supabase.py
src/acadlabs_cli/commands/: __init__.py  auth.py  chat.py  config.py  update.py
src/acadlabs_cli/core/agent/: loop.py
src/acadlabs_cli/utils/security/: layer1_executor.py
